# analogue_pal_tool

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: cli.rs  helpers.rs  image_handler.rs  lib.rs  main.rs  palette.rs  png_helper.rs
templates/: index.html
