[package]
name = "analogue_pal_tool"
version = "0.1.0"
edition = "2021"
authors = ["pecet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
fern = "0.6"
log = "0.4"
