[package]
name = "analogue_pal_tool"
version = "0.1.0"
edition = "2021"
authors = ["pecet"]
build = "build.rs"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
fern = "0.6"
glob = "0.3"
image = "0.24"
imageproc = "0.23"
itertools = "0.12"
lazy_static = "1.4.0"
log = "0.4"
png = "0.17.11"
rayon = "1.8.0"
tera = "1.19.1"
thiserror = "1.0.56"
